# dyce

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .travis.yml  CREDITS  LICENSE  MANIFEST.in  README.md  README.rst  _griffe_ext.py  _mkdocs_hooks.py  codecov.yml  conftest.py  jupyter-lite.json  jupyter_lite_config.json  mkdocs.yml  mkdocs_hooks.py  overrides.json  pyproject.toml  readthedocs.yaml  runtests.sh  setup.cfg  setup.py  tox.ini  versions.json
.github/: dependabot.yml
.github/workflows/: docs.yml  on-push.yaml  publish.yml  tests.yml  unit-tests.yaml
0.1/: 404.html  index.html
0.1/contrib/: index.html
0.1/dyce/: index.html
0.1/dyce.plt/: index.html
0.1/license/: index.html
0.1/search/: search_index.json
0.2/: 404.html  index.html  mathjax.js  sitemap.xml
0.2/contrib/: index.html
0.2/dyce/: index.html
0.2/dyce.plt/: index.html
0.2/license/: index.html
0.2/search/: search_index.json
0.2/translations/: index.html
0.2/tutorial/: index.html
0.3/: 404.html  index.html  sitemap.xml
0.3/contrib/: index.html
0.3/countin/: index.html
0.3/dyce/: index.html
0.3/dyce.h/: index.html
0.3/dyce.plt/: index.html
0.3/dyce.r/: index.html
0.3/dyce.viz/: index.html
0.3/license/: index.html
0.3/notes/: index.html
0.3/rollin/: index.html
0.3/search/: search_index.json
0.3/translations/: index.html
0.3/tutorial/: index.html
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4/assets/: Makefile  perf_order_stat_for_n.txt  perf_resolve_dependent_probability.ipy  perf_resolve_dependent_probability.txt
0.4/contrib/: index.html
0.4/countin/: index.html
0.4/dyce/: index.html
0.4/dyce.h/: index.html
0.4/dyce.r/: index.html
0.4/dyce.viz/: index.html
0.4/license/: index.html
0.4/notes/: index.html
0.4/rollin/: index.html
0.4/search/: search_index.json
0.4/translations/: index.html
0.5/: 404.html  index.html  objects.inv  sitemap.xml
0.5/assets/: Makefile  perf_appearances_in_rolls.ipy  perf_appearances_in_rolls.txt  perf_foreach.txt  perf_order_stat_for_n.ipy
0.5/contrib/: index.html
0.5/countin/: index.html
0.5/dyce/: index.html
0.5/dyce.h/: index.html
0.5/dyce.r/: index.html
0.5/license/: index.html
0.5/notebooks/: 2d6_lo_hi.ipynb  4d6_variants.ipynb  advantage.ipynb  anydyce_intro.ipynb  burning_arch.ipynb  d10_explode.ipynb  dupes.ipynb  great_weapon_fighting.ipynb  histogram.ipynb  ironsworn.ipynb  requirements.txt  risus.ipynb  roll_and_keep.ipynb
0.5/notes/: index.html
0.5/rollin/: index.html
0.5/search/: search_index.json
0.5/translations/: index.html
0.6/: 404.html  index.html  logo.gsp  objects.inv  sitemap.xml
0.6/assets/: perf_foreach.txt  perf_pools_vs_rollers.ipy  perf_pools_vs_rollers.txt  perf_rolls_with_counts.ipy  perf_rolls_with_counts.txt
0.6/contrib/: index.html
0.6/countin/: index.html
0.6/dyce/: index.html
0.6/dyce.evaluation/: index.html
0.6/dyce.h/: index.html
0.6/dyce.r/: index.html
0.6/js/: site.js
0.6/jupyter/: jupyter-lite.json
0.6/license/: index.html
0.6/notes/: index.html
0.6/rollin/: index.html
0.6/search/: search_index.json
0.6/translations/: index.html
0.7/: 404.html  index.html  objects.inv
0.7/assets/: _plot.py  perf_rolls_with_counts.ipy  perf_rolls_with_counts.txt  plot_advantage.py  plot_burning_arch.py  plot_d10_explode.py  plot_dupes.py  plot_great_weapon_fighting.py  plot_risus.py  plot_risus_evens_up_base_use.txt  plot_risus_evens_up_decode_hits.txt  plot_viz_plot_bar.py  plot_viz_plot_hbar.py  plot_viz_plot_line.py
0.7/contrib/: index.html
0.7/countin/: index.html
0.7/dyce/: index.html
0.7/dyce.d/: index.html
0.7/dyce.viz/: index.html
0.7/jupyter/: jupyter-lite.json
0.7/license/: index.html
0.7/notebooks/: d10_explode.ipynb  prerequisites.py
0.7/notes/: index.html
0.7/search/: search_index.json
0.7/translations/: index.html
_skel/: __init__.py  main.py  version.py
docs/: Makefile  conf.py  contrib.md  contrib.rst  countin.md  dyce.d.md  dyce.evaluation.md  dyce.h.md  dyce.md  dyce.plt.md  dyce.plt.rst  dyce.r.md  dyce.rst  dyce.viz.md  find_seed.py  graph.py  graph_rollin_pool.dot  graph_rollin_pool.py  graph_rollin_select.dot  graph_rollin_select_2.py  graph_rollin_value.py  img_theme.js  index.md  index.rst  intro.rst  notes.md  plot.py  plot_2d6_lo_hi.py  plot_4d6_variants.py  plot_advantage.py  plot_burning_arch.py  plot_burst_1.py  plot_burst_2.py  plot_burst_3.py  plot_d10_explode.py  plot_dupes.py  plot_great_weapon_fighting.py  plot_histogram.py  plot_risus_first_round.py  plug.py  (+5 more)
docs/assets/: Makefile  _plot.py  _risus_advanced.py  _risus_data.py  _risus_display.py  _risus_driver.py  graph.py  graph_classes_dyce_r.py  graph_filter.py  graph_rollin_branch_1.py  graph_rollin_branch_2.py  graph_rollin_expr.py  graph_rollin_pool.py  graph_rollin_select_1.py  graph_rollin_select_2.py  graph_rollin_value.py  graph_substitute_append.py  graph_substitute_replace.py  nb_2d6_lo_hi.py  nb_4d6_variants.py  nb_advantage.py  nb_burning_arch.py  nb_d10_explode.py  nb_dupes.py  nb_great_weapon_fighting.py  nb_histogram.py  nb_ironsworn.py  nb_risus.py  nb_roll_and_keep.py  perf_appearances_in_rolls.txt  perf_expand.ipy  plot.py  (+27 more)
dyce/: __init__.py  bt.py  d.py  evaluation.py  experimental.py  h.py  hable.py  lib.py  lifecycle.py  numtypes.py  p.py  plt.py  r.py  rng.py  symmetries.py  types.py  version.py  viz.py
helpers/: anydice_programs.py  check-doctests.py  checkmodified.sh  ci-vars.sh  dev-requirements.txt  draft-release.sh  find-seed.py  mypy-doctests.py  release-checklist.md  release.sh  release_checklist.md  runtests.sh  venvsetup.sh
notes/: expr-design.md
test/: __init__.py  symmetries.py  test_main.py  test_meta.py
tests/: __init__.py  numberwang.py  patches.py  requirements.txt  symmetries.py  test_doctests.py  test_evaluation.py  test_h.py  test_hable.py  test_lib.py  test_lifecycle.py  test_main.py  test_meta.py  test_num.py  test_p.py  test_plt.py  test_r.py  test_rng.py  test_types.py  test_viz.py
(+111 files in other folders)
