[project]
name = "dyce"
dynamic = ["version"]
description = "optype test"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "optype",
    "typing_extensions>=4.5; python_version < '3.13'",  # back-port of deprecated decorator
]

[project.optional-dependencies]
viz = ["matplotlib"]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dyce"]
package-data = {"dyce" = ["py.typed"]}

[tool.setuptools_scm]
fallback_version = "0.0.0+unknown"

[dependency-groups]
dev = [
    "ipython",
    "pre-commit",
    "pre-commit-uv",
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "tox"},
    {include-group = "viz"},
]
docs = [
    "click>=8.3.2",  # see <https://github.com/mkdocs/mkdocs/issues/4032>
    "griffe-warnings-deprecated",
    "jupyter-server",
    "jupyterlab-server",
    "jupyterlab-widgets",
    "jupytext",
    "jupyterlite",
    "jupyterlite-pyodide-kernel",
    "markdown-pycon",
    "mike",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "numpy",
    "pandas",
    "pandas-stubs",
    "pymdown-extensions",
    "sympy",
    {include-group = "viz"},
]
lint = [
    "beartype",
    "matplotlib_inline",
    "mypy",
    "pyrefly",
    "pyright",
    "pytest",
    "ruff",
    "ty",
    {include-group = "docs"},
]
test = [
    "beartype",
    "coverage[toml]",
    "ipdb",
    "numpy",
    "pandas",
    "pytest-beartype",
    "pytest-cov",
    {include-group = "test-pypy"},
    {include-group = "viz"},
]
test-pypy = [
    "griffe-warnings-deprecated",
    "pytest",
    "pytest-gitignore",
    "sympy",
]
tox = [
    "tox",
    "tox-uv",
]
viz = ["matplotlib"]

[tool.codespell]
ignore-words-list = "CanGe,countin,ot,rollin"
skip = ["*.ipynb"]

[tool.coverage.run]
source = ["dyce"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.mypy]
files = ["docs", "dyce", "helpers", "tests", "*.py"]
# exclude = """(?x)(
#     ^docs/assets/nb_.*\\.py$
# )"""
python_version = "3.11"
exclude_gitignore = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.pyrefly]
project-includes = ["docs", "dyce", "helpers", "tests", "*.py"]
python-version = "3.11.0"
infer-with-first-use = false

[warnings]
unused-ignore = true

[tool.pyright]
include = ["docs", "dyce", "helpers", "tests", "*.py"]
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = "warning"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = [
  "--doctest-glob=*.md",
  "--doctest-modules",
  "--pdbcls=IPython.terminal.debugger:TerminalPdb",
]
testpaths = ["README.md", "docs", "dyce", "helpers", "tests", "*.py"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"docs/assets/nb_*.py" = [
  # Allow co-mingled imports for snippets
  "E402",  # Module level import not at top of file
  # ruff is confused by jupytext comments
  "ERA001",  # Found commented-out code
  # Cells support `await` statements
  "F704",  # `await` statement outside of a function
  "PLE1142",  # `await` should be used within an async function
  # Useful for cell display
  "B018",   # Found useless expression
  "T201",  # `print` found (eglot-check)
  # Catch-all for things that are only ignored in these files
  "RUF100",  # Unused `noqa` directive ...
]
"docs/assets/plot_*.py" = [
  # Allow co-mingled imports for snippets
  "E402",  # Module level import not at top of file
  # Useful for cell display
  "B018",   # Found useless expression
  "T201",  # `print` found (eglot-check)
]
"docs/notebooks/*.ipynb" = [
  "E402",  # Module level import not at top of file
  # Useful for cell display
  "B018",   # Found useless expression
  "T201",  # `print` found (eglot-check)
]

[tool.ruff.lint]
preview = true
ignore = [
  "CPY",
  "D",
  "DOC",
  "EM",
  "FIX",  # TODO(posita): run occasionally, or figure out how to make these warnings
  "PLC",
  "PLR",
  "COM812",  # Trailing comma missing
  "E501",  # Line too long (... > ...)
  "INP001",  # File ... is part of an implicit namespace package. Add an `__init__.py`.
  "N806",  # Variable ... in function should be lowercase
  "RET505",  # Unnecessary `else` after `return` statement
  "RET506",  # Unnecessary `else` after `raise` statement
  "RET507",  # Unnecessary `else` after `continue` statement
  "RUF002",  # Docstring contains ambiguous ...
  "RUF067",  # `__init__` module should only contain docstrings and re-exports
  "S101",  # Use of `assert` detected
  "S311",  # Standard pseudo-random generators are not suitable for cryptographic purposes
  "TRY003",  # Avoid specifying long messages outside the exception class
]
select = [
  "ALL",
]

[tool.ty.src]
include = ["docs", "dyce", "helpers", "tests", "*.py"]
exclude = ["docs/assets/nb_*.py"]

[tool.check_doctests]
# log_level = "DEBUG"

[tool.check_doctests.check]
checkers = [["ty", "check"], ["pyrefly", "check", "--search-path", "."], ["pyright"], ["mypy"]]
fail_fast = false
