# ======================================================================================
# Copyright and other protections apply. Please see the accompanying LICENSE file for
# rights and restrictions governing use of this software. All rights not expressly
# waived or licensed are reserved. If that file is missing or appears to be modified
# from its original, then please contact the author before viewing or using this
# software in any capacity.
# ======================================================================================

[metadata]  # --------------------------------------------------------------------------

name = dyce
version = attr:dyce.version.__vers_str__
url = https://posita.github.io/dyce/latest/
author = Matt Bogosian
author_email = matt@bogosian.net
project_urls =
    Source Repository = https://github.com/posita/dyce/
# From <https://pypi.python.org/pypi?%3Aaction=list_classifiers>
classifiers =
  Topic :: Education
  Topic :: Games/Entertainment
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Software Development :: Libraries :: Python Modules
  Typing :: Typed
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
license = MIT License
license_files = LICENSE
description = Simple Python tools for exploring dice outcomes and other finite discrete probabilities
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]  # ---------------------------------------------------------------------------

packages = dyce
python_requires = >=3.7
install_requires =
  numerary
setup_requires =
  numerary

[options.extras_require]  # ------------------------------------------------------------

dev =
  beartype>=0.8,!=0.9.0
  pre-commit
  sympy  # for testing
  tox

[options.package_data] # ---------------------------------------------------------------

dyce = py.typed

[tox:tox]  # ---------------------------------------------------------------------------

envlist = check, py39-lint{,-beartype}, py39{,-beartype-matplotlib}, py{37,38,310,py37,py38}-beartype
skipsdist = true
skip_missing_interpreters = true

[gh-actions]  # ------------------------------------------------------------------------

python =
  3.7: py37-beartype
  3.8: py38-beartype
  3.9: check, py39-lint{,-beartype}, py39{,-beartype-matplotlib}
  3.10: py310-beartype
  pypy-3.7: pypy37-beartype
  pypy-3.8: pypy38-beartype

[testenv]  # ---------------------------------------------------------------------------

commands =
  pytest --cov=dyce {posargs}
deps =
  --editable .
  beartype: beartype>=0.8,!=0.9.0
  matplotlib: matplotlib
  !pypy37-!pypy38: numpy
  pytest-cov
  # Because ${HOME} is not passed, ~/.gitconfig is not read. To overcome this, port any
  # desired user-specific exclusion configuration to .git/config. E.G.:
  #
  #   [core]
  #   excludesfile = /home/username/.gitignore
  #
  # Alternatively, add entries directly to .git/info/exclude. See also mkdocs-exclude
  # below.
  pytest-gitignore
  sympy
passenv =
  PYTHONBREAKPOINT
setenv =
  PYTHONWARNINGS = {env:PYTHONWARNINGS:ignore}

[testenv:assets]  # --------------------------------------------------------------------

commands =
  make -C docs/assets -j {env:NUMBER_OF_PROCESSORS:1}
  make -C docs/assets perf
deps =
  --editable .
  graphviz
  matplotlib
  sympy
  pygraphviz
  # pylint contains pyreverse
  pylint
whitelist_externals =
  make

[testenv:check]  # ---------------------------------------------------------------------

commands =
  rm -frv site
  mkdocs build --strict
  python -c 'from setuptools import setup ; setup()' bdist_wheel
  twine check dist/*
deps =
  --editable .
  matplotlib
  mike
  # See <https://github.com/mkdocs/mkdocs/issues/2448>
  # See <https://github.com/mkdocstrings/mkdocstrings/issues/295>
  mkdocs!=1.2
  # See pytest-gitignore note above
  mkdocs-exclude
  mkdocs-material
  mkdocstrings
  sympy
  twine
whitelist_externals =
  rm

[testenv:py{37,38,39,310}-lint{,-beartype}]  # -----------------------------------------

commands =
  pre-commit run --all-files --show-diff-on-failure
  beartype: mypy --config-file={toxinidir}/pyproject.toml --warn-unused-ignores .
  !beartype: mypy --config-file={toxinidir}/pyproject.toml .
  {toxinidir}/helpers/mypy-doctests.py -a=--config-file={toxinidir}/pyproject.toml .
deps =
  --editable .
  beartype: beartype>=0.8,!=0.9.0
  mypy
  pre-commit
  sympy

[flake8]  # ----------------------------------------------------------------------------

# See:
# * <https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes>
# * <https://flake8.readthedocs.io/en/latest/user/error-codes.html>
ignore =
  E501,  # line too long (... > ... characters)
  W503,  # line break occurred before a binary operator
